# OHask

./: .gitignore  OHask.cabal  hie.yaml  main.py
calcComplexity/: Calc.py  Config.py  Log.py  __init__.py
calcComplexity/UntypedLambdaCalculus/: Lambda.py  __init__.py
calcComplexity/basicFuncs/: BasicFuncs.py  SympyLog.py  __init__.py
calcComplexity/constraint/: Constraint.py  ExprInfo.py  Symbols.py  SympyConstraint.py  __init__.py
calcComplexity/genConstraints/: BuildStruct.py  FillDepAndDef.py  GenConstraints.py  Simplify.py  VarDef.py  VarDep.py  __init__.py
calcComplexity/genDependencies/: BuildStruct.py  __init__.py
calcComplexity/haskellStruct/: HaskellPrinter.py  Imports.py  SimplePrinter.py  Struct.py  Util.py  __init__.py
calcComplexity/regression/: GenData.py  Lasso.py  Linear.py  Parse.py  RegressionResult.py  __init__.py
calcComplexity/runDynExec/: GenProgram.py  Group.py  RunRepl.py  __init__.py
calcComplexity/solve/: BasicFuncs.py  BuiltinFunctions.py  ConvertToSympy.py  Data.py  ExprSymReplaceDict.py  FuncDom.py  FunctionizeExprSymbols.py  GenData.py  GenDomGraph.py  LookupScaleRelations.py  MakeScaleFuncs.py  MarkRecCalls.py  Parse.py  ScaleFunc.py  ScaleRelation.py  __init__.py
calcComplexity/solve/branchGraph/: Graph.py
calcComplexity/solve/util/: HigherOrder.py  MaxN.py  SympySymbols.py
calcComplexity/untypedLambdaCalculus/: Lambda.py  Term.py  Test.py  Util.py  __init__.py
calcFuncComplexity/: Api.py  CalcFuncComplexity.py  GenConstrains.py  LazyLambda.py  PromoteStatLambdas.py  SymbolMaker.py  Util.py  ZEncode.py
calcFuncComplexity/dep/: GetDependencyInfo.py
calcFuncComplexity/dep/preprocess/: Api.py  GenConstraints.py  PromoteStatLambdas.py  SymbolMaker.py
calcFuncComplexity/dep/simplify/: ApplyBuiltinConstraints.py  InlineConstFunctions.py  Simplify.py  SqueezeConstTerms.py
calcFuncComplexity/dep/struct/: Constraint.py  MaxCompl.py
calcFuncComplexity/dyn/: DynamicAnalysis.py
calcFuncComplexity/preprocess/: Api.py  GenConstrains.py  GenConstraints.py  PromoteStatLambdas.py  SymbolMaker.py  SymbolizeVars.py
calcFuncComplexity/simplify/: InlineConstFunctions.py  RemoveConstTerms.py  RemoveUnusedConstraints.py  Simplify.py  SqueezeConstTerms.py
calcFuncComplexity/solve/: BuildDepGraph.py  BuiltinConstraint.py  BuiltinConstraints.py  DepGraphNode.py  DependencyGraph.py  Solve.py  TopoSort.py
calcFuncComplexity/struct/: Constraint.py  LazyLambda.py  Literal.py  MaxCompl.py  MyLambda.py  __init__.py
calcFuncComplexity/util/log/: Log.py  __init__.py
calcFuncComplexity/util/symbol/: SymbolUtil.py  __init__.py
dynExec/: Exprs.hs  Main.hs  RandomGen.hs  Result.hs  Scales.hs  TestGroup.hs
dynExec/lib/: RandomGen.hs  Result.hs  Scale.hs  TestGroup.hs
findImports/: FindImports.hs
funcAppStat/: FuncAppStat.hs
funcAppStat/output/: ExprTreeOutput.hs  StatInfoBriefOutput.hs  StatInfoJsonOutput.hs
funcAppStat/util/: Util.hs
funcInfoStat/: FuncInfoStat.hs
funcInfoStat/output/: ExprTreeOutput.hs  StatInfoBriefOutput.hs  StatInfoJsonOutput.hs
funcInfoStat/util/: Util.hs
plugins/: ExprTree.hs  FuncAppStat.hs  GenFuncStatInfo.hs  GenStatInfo.hs  SimpleExprInfo.hs  StatInfo.hs  StatInfoOutput.hs  StatOutput.hs  Util.hs
tests/: Fact.hs  Hex.hs  HigherOrder.hs  MergeSort.hs  Simple.hs  Sum.hs
