cabal-version:      3.0
name:               OHask
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Language
build-type:         Simple


common common-options
    default-language: Haskell2010


library Util
    import:           common-options
    exposed-modules:  
        Util
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   funcAppStat/util


library Gen
    import:           common-options
    exposed-modules:  
        ExprTree,
        ExprTreeGen,
        FindSubFuncs,
        StatInfo,
        StatInfoGen
    build-depends:    Util, base ^>=4.17.2.0, ghc
    hs-source-dirs:   funcAppStat/gen


library Output
    import:           common-options
    exposed-modules:  
        ExprTreeOutput,
        StatInfoBriefOutput,
        StatInfoJsonOutput
    build-depends:    Util, Gen, base ^>=4.17.2.0
    hs-source-dirs:   funcAppStat/output


library FuncAppStat
    import:           common-options
    exposed-modules:  
        FuncAppStat
    build-depends:    Gen, Output, base ^>=4.17.2.0, ghc
    hs-source-dirs:   funcAppStat


executable Run
    import:           common-options
    main-is:          Run.hs
    build-depends:    FuncAppStat, base ^>=4.17.2.0
    ghc-options:      -O0 
                      -fplugin=FuncAppStat
                      -w
    hs-source-dirs:   run