cabal-version:      3.0
name:               OHask
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Language
build-type:         Simple


common common-options
    default-language: Haskell2010


-- Function Application Statistic Plugin --

library Util
    import:           common-options
    exposed-modules:  
        Util
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   funcInfoStat/util


library Gen
    import:           common-options
    exposed-modules:  
        ExprTree,
        ExprTreeGen,
        FindSubFuncs,
        StatInfo,
        StatInfoGen
    build-depends:    Util, base ^>=4.17.2.0, ghc
    hs-source-dirs:   funcInfoStat/gen


library Output
    import:           common-options
    exposed-modules:  
        ExprTreeOutput,
        StatInfoBriefOutput,
        StatInfoJsonOutput
    build-depends:    Util, Gen, base ^>=4.17.2.0
    hs-source-dirs:   funcInfoStat/output


library FuncInfoStat
    import:           common-options
    exposed-modules:  
        FuncInfoStat
    build-depends:    Gen, Output, base ^>=4.17.2.0, ghc
    hs-source-dirs:   funcInfoStat


executable Stat
    import:           common-options
    main-is:          Run.hs
    build-depends:    FuncInfoStat, base ^>=4.17.2.0
    ghc-options:      -O0 
                      -fplugin=FuncInfoStat
                      -w
    hs-source-dirs:   run



-- Dynamic Analysis --

executable DynExec
    import:           common-options
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    ghc-options:      -O1
    hs-source-dirs:   dynExec
