cabal-version:      3.0
name:               OHask
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Language
build-type:         Simple


common common-options
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    
        base ^>=4.17.2.0,
        text ^>=2.0.2


-- Function Application Statistic Plugin --

library Util
    import:           common-options
    exposed-modules:  
        Util
    hs-source-dirs:   util


library Gen
    import:           common-options
    exposed-modules:  
        ExprTree,
        ExprTreeGen,
        FindSubFuncs,
        StatInfo,
        StatInfoGen
    build-depends:    
        Util,
        ghc ^>=9.4.7
    hs-source-dirs:   funcInfoStat/gen


library Output
    import:           common-options
    exposed-modules:  
        ExprTreeOutput,
        StatInfoBriefOutput,
        StatInfoJsonOutput
    build-depends:    
        Util,
        Gen
    hs-source-dirs:   funcInfoStat/output


library FuncInfoStat
    import:           common-options
    exposed-modules:  
        FuncInfoStat
    build-depends:    
        Gen, 
        Output, 
        ghc ^>=9.4.7
    hs-source-dirs:   funcInfoStat


library MainTmp
    import:           common-options
    exposed-modules:  
        MainTmp
    build-depends:    
        FuncInfoStat
    ghc-options:      
        -O0 
        -w
        -fplugin=FuncInfoStat
    hs-source-dirs:   tmp/mainTmp



-- Dynamic Analysis --

library DynExprs
    import:           common-options
    exposed-modules:  
        DynExprs
    build-depends:
        ghc-prim ^>=0.9.1,
        MainTmp
    hs-source-dirs:   tmp/dynExprs


library DynExecLib
    import:           common-options
    exposed-modules:  
        TestGroup
    other-modules:
        RandomGen, 
        Result,
        Scale
    build-depends:
        QuickCheck ^>=2.14.3,
        Util
    hs-source-dirs:   dynExec/lib


executable DynExec
    import:           common-options
    main-is:          Main.hs
    build-depends:    
        DynExecLib,
        DynExprs,
        deepseq
    hs-source-dirs:   dynExec
